samples/_failures_safe/1761498925_32ae17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6cf8d68.c: In function ‘main’:
./samples/SAFE/__tmp_b6cf8d68.c:136:5: error: expected expression at end of input
  136 |     if (decompress_data(&compressed, output_data, sizeof
      |     ^~
./samples/SAFE/__tmp_b6cf8d68.c:136:5: error: expected declaration or statement at end of input
